--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang=" style="font-size: 10.4727px;">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pick3Data</title>
 </head>
-<body>
-   <p>Welcome to pick, ready to make the big bucks</p> 
-</body>
 </html>
+<body class="darken" style>
+    <div id="root" class ="base-layout side-unfold has-chat g2">
+        <div class="imyum48i mobile-header" style="transform: translate3d(0px, 0%, opx);"</div>
+            
