added imputs and a button

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 <title>pick3Data</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
                 <input type="text" placeholder="user name">
                 <input type="text" placeholder="password">
                 <input type="text" placeholder="email">
-                <button>Create New Account</button>
+                <button>Welcome to pick3Data</button>
                
             </form>
 
