--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <title>pick3Data</title>
 </head>
 <body>
-    
+    <img 
+    <h1>pick3Data</h1>
+   <p> login to see your lucky numbers</p>
     <div class="login-page">
         <div class="form">
             <form class="register-form">
