adding dropdown menu

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
          <input type="text" placeholder="next winners name">
                 <input type="text" placeholder="password">
                 <input type="text" placeholder="email">
-                <button>Login</button>
+                <button>Loin</button>
                
             </form>
 
