--- a/index.html
+++ b/index.html
@@ -59,17 +59,17 @@
 		
 	  <!--───────────────Projects───────────────-->
 	  <div id="projects"> 
-		 <h3>My Projects.<hr></h3>
-		  <p>Here are some of my projects, you may like.</p>
+		 <h3>Winning Numbers<hr></h3>
+		  <p>Winners</p>
 		  <div class="work-box">
 		  <div class="work">
 		<!--───────────────card───────────────-->
 			<div class="card">
-			    <img class="work-img" src="https://images.unsplash.com/photo-1518611507436-f9221403cca2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1225&q=80">
+			    <img class="work-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTrzDOVUoy-dfoU0CUmzPU58iUsihyzjFe3RA&usqp=CAU">
 			    <a href="" target="_blank"> <!--Link to project-->
-				<div class="work-content">Lorem ipsum dolor sit amet consectetur.</div></a>
+				<div class="work-content"></div></a>
             </div>
 			<div class="card">
-			    <img class="work-img" src="https://images.unsplash.com/photo-1462642109801-4ac2971a3a51?ixlib=rb-1.2.1&auto=format&fit=crop&w=1266&q=80">
+			    <img class="work-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSFcQHQx3DL31kzgdsI8s37JG8wUWw_IMym1A&usqp=CAU">
 				<a href="" target="_blank"> <!--Link to project-->
-				<div class="work-content">Lorem ipsum dolor sit amet 
+				<div class="work-content">
