just messing arounf

--- a/index.html
+++ b/index.html
@@ -122,8 +122,10 @@
         <section class="pick3-section">
           <h2>Pick3Data</h2>
           <p>Our program reduces the odds of winning Pick3 in the United States by analyzing past winning numbers and predicting which numbers are most likely to be drawn next. With Pick3Data, you can increase your chances of hitting the jackpot and bringing home the cash!</p>
+          <h2>Past Winning Nubers</h2>
           <div class="winning-numbers">
             <div class="state">
+             
               <h3>California</h3>
               <p>9-1-7</p>
             </div>
